tools/fleet/fixtures/packets/invalid/tmp-without-exception.case
source=valid-work.packet
mutation=move normal Worktree and Launch-Command under /tmp while Provisioning-Exception remains NONE
expected=invalid
